@@ -1,4 +1,5 @@
 2.2.6
+ * Fix AE in nodetool cfstats (backport CASSANDRA-10859) (CASSANDRA-11297)
  * Unresolved hostname leads to replace being ignored (CASSANDRA-11210)
  * Fix filtering on non-primary key columns for thrift static column families
    (CASSANDRA-6377)
